# kunkun-skillhub

./: .gitignore  README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns  make_atomic_icon.py
desktop/src-tauri/src/: main.rs
desktop/tests/: test_stat_cards_interaction.py
docs/: 00-README.md  01-inventory-verified.md  02-usage-and-perf-verified.md  03-fix-backfill.md  04-reminder-algorithm.md
scanner-core/: Cargo.toml
scanner-core/src/: deleter.rs  inventory.rs  lib.rs  main.rs  model.rs  usage.rs  usermeta.rs
scanner-core/tests/: delete_safety.rs  usermeta_persist.rs
submission/: feature-introduction.md
