[package]
name = "scanner-core"
version = "0.1.0"
edition = "2021"
description = "SkillHub 扫描内核 — Claude Code + Codex 技能盘点/调用统计/日志体检"

[[bin]]
name = "skillscan"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
dirs = "5"
trash = "5"

[profile.release]
opt-level = 3

[lib]
name = "scanner_core"
path = "src/lib.rs"
