[package]
name = "skillhub-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 复用扫描内核(相对路径引用同仓库的 crate)
scanner-core = { path = "../../scanner-core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
